--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "8.22.0",
+    "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "19.2.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
