refactor odo form and integrate Maskito for input handling
- Renamed AddOdoEntryComponent to AddOdoFormComponent and moved form template to its own file for better organization.
- Added Maskito input directive to improve UX for numeric fields in several components, including leasing contract and odo form.
- Minor UI and style enhancements were applied for better layout clarity.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser-dynamic": "19.2.2",
     "@angular/router": "19.2.2",
     "@angular/service-worker": "19.2.2",
+    "@maskito/angular": "^3.7.2",
+    "@maskito/core": "^3.7.2",
+    "@maskito/kit": "^3.7.2",
     "@push-based/ngx-fast-svg": "^18.1.0",
     "apexcharts": "^4.5.0",
     "daisyui": "^4.12.22",
