--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "19.2.1",
     "autoprefixer": "^10.4.0",
+    "esbuild-visualizer": "^0.7.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^1.6.2",
