--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
     "@angular/language-service": "19.2.2",
     "@angular/pwa": "^19.2.5",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.6.0",
-    "@nx/devkit": "20.6.0",
-    "@nx/eslint": "20.6.0",
-    "@nx/eslint-plugin": "20.6.0",
-    "@nx/jest": "20.6.0",
-    "@nx/js": "20.6.0",
-    "@nx/playwright": "20.6.0",
-    "@nx/web": "20.6.0",
-    "@nx/workspace": "20.6.0",
+    "@nx/angular": "21.1.3",
+    "@nx/devkit": "21.1.3",
+    "@nx/eslint": "21.1.3",
+    "@nx/eslint-plugin": "21.1.3",
+    "@nx/jest": "21.1.3",
+    "@nx/js": "21.1.3",
+    "@nx/playwright": "21.1.3",
+    "@nx/web": "21.1.3",
+    "@nx/workspace": "21.1.3",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "19.2.3",
     "@swc-node/register": "~1.9.1",
@@ -61,12 +61,12 @@
     "autoprefixer": "^10.4.0",
     "esbuild-visualizer": "^0.7.0",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.5",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
-    "nx": "20.6.0",
+    "nx": "21.1.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
