--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.2.2",
-    "@angular/common": "19.2.2",
-    "@angular/compiler": "19.2.2",
-    "@angular/core": "19.2.2",
-    "@angular/forms": "19.2.2",
-    "@angular/platform-browser": "19.2.2",
-    "@angular/platform-browser-dynamic": "19.2.2",
-    "@angular/router": "19.2.2",
-    "@angular/service-worker": "19.2.2",
+    "@angular/animations": "20.0.6",
+    "@angular/common": "20.0.6",
+    "@angular/compiler": "20.0.6",
+    "@angular/core": "20.0.6",
+    "@angular/forms": "20.0.6",
+    "@angular/platform-browser": "20.0.6",
+    "@angular/platform-browser-dynamic": "20.0.6",
+    "@angular/router": "20.0.6",
+    "@angular/service-worker": "20.0.6",
     "@maskito/angular": "^3.7.2",
     "@maskito/core": "^3.7.2",
     "@maskito/kit": "^3.7.2",
@@ -31,50 +31,50 @@
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.5",
-    "@angular-devkit/core": "19.2.3",
-    "@angular-devkit/schematics": "19.2.3",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "19.2.2",
-    "@angular/language-service": "19.2.2",
-    "@angular/pwa": "^19.2.5",
+    "@angular-devkit/build-angular": "20.0.5",
+    "@angular-devkit/core": "20.0.5",
+    "@angular-devkit/schematics": "20.0.5",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.0.6",
+    "@angular/language-service": "20.0.6",
+    "@angular/pwa": "20.0.5",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "21.1.3",
-    "@nx/devkit": "21.1.3",
-    "@nx/eslint": "21.1.3",
-    "@nx/eslint-plugin": "21.1.3",
-    "@nx/jest": "21.1.3",
-    "@nx/js": "21.1.3",
-    "@nx/playwright": "21.1.3",
-    "@nx/web": "21.1.3",
-    "@nx/workspace": "21.1.3",
+    "@nx/angular": "21.2.2",
+    "@nx/devkit": "21.2.2",
+    "@nx/eslint": "21.2.2",
+    "@nx/eslint-plugin": "21.2.2",
+    "@nx/jest": "21.2.2",
+    "@nx/js": "21.2.2",
+    "@nx/playwright": "21.2.2",
+    "@nx/web": "21.2.2",
+    "@nx/workspace": "21.2.2",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "19.2.3",
+    "@schematics/angular": "20.0.5",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "22.13.17",
-    "@typescript-eslint/utils": "8.22.0",
+    "@typescript-eslint/utils": "^8.33.1",
     "angular-cli-ghpages": "^2.0.3",
-    "angular-eslint": "19.2.1",
+    "angular-eslint": "20.1.1",
     "autoprefixer": "^10.4.0",
     "esbuild-visualizer": "^0.7.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.4.0",
-    "nx": "21.1.3",
+    "jest-preset-angular": "14.6.0",
+    "nx": "21.2.2",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.1",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.7.3",
-    "typescript-eslint": "8.22.0",
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.33.1",
     "zx": "^8.4.1"
   },
   "nx": {
