--- a/package.json
+++ b/package.json
@@ -10,71 +10,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.0.6",
-    "@angular/common": "20.0.6",
-    "@angular/compiler": "20.0.6",
-    "@angular/core": "20.0.6",
-    "@angular/forms": "20.0.6",
-    "@angular/platform-browser": "20.0.6",
-    "@angular/platform-browser-dynamic": "20.0.6",
-    "@angular/router": "20.0.6",
-    "@angular/service-worker": "20.0.6",
+    "@angular/animations": "21.0.6",
+    "@angular/common": "21.0.6",
+    "@angular/compiler": "21.0.6",
+    "@angular/core": "21.0.6",
+    "@angular/forms": "21.0.6",
+    "@angular/platform-browser": "21.0.6",
+    "@angular/platform-browser-dynamic": "21.0.6",
+    "@angular/router": "21.0.6",
+    "@angular/service-worker": "21.0.6",
     "@maskito/angular": "^3.7.2",
     "@maskito/core": "^3.7.2",
     "@maskito/kit": "^3.7.2",
     "@push-based/ngx-fast-svg": "^18.1.0",
-    "apexcharts": "^4.5.0",
+    "apexcharts": "^5.3.6",
     "daisyui": "^4.12.22",
-    "ng-apexcharts": "^1.15.0",
+    "ng-apexcharts": "^2.0.4",
     "ngxtension": "^4.3.2",
     "rxdb": "^15.39.0",
-    "rxjs": "~7.8.0"
+    "rxjs": "~7.8.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.0.5",
-    "@angular-devkit/core": "20.0.5",
-    "@angular-devkit/schematics": "20.0.5",
-    "@angular/cli": "~20.0.0",
-    "@angular/compiler-cli": "20.0.6",
-    "@angular/language-service": "20.0.6",
-    "@angular/pwa": "20.0.5",
+    "@angular-devkit/build-angular": "21.0.4",
+    "@angular-devkit/core": "21.0.4",
+    "@angular-devkit/schematics": "21.0.4",
+    "@angular/cli": "21.0.4",
+    "@angular/compiler-cli": "21.0.6",
+    "@angular/language-service": "21.0.6",
+    "@angular/pwa": "21.0.4",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "21.2.2",
-    "@nx/devkit": "21.2.2",
-    "@nx/eslint": "21.2.2",
-    "@nx/eslint-plugin": "21.2.2",
-    "@nx/jest": "21.2.2",
-    "@nx/js": "21.2.2",
-    "@nx/playwright": "21.2.2",
-    "@nx/web": "21.2.2",
-    "@nx/workspace": "21.2.2",
+    "@nx/angular": "22.3.3",
+    "@nx/devkit": "22.3.3",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/js": "22.3.3",
+    "@nx/playwright": "22.3.3",
+    "@nx/web": "22.3.3",
+    "@nx/workspace": "22.3.3",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "20.0.5",
+    "@schematics/angular": "21.0.4",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
     "@types/node": "22.13.17",
-    "@typescript-eslint/utils": "^8.33.1",
+    "@typescript-eslint/utils": "8.50.1",
     "angular-cli-ghpages": "^2.0.3",
-    "angular-eslint": "20.1.1",
+    "angular-eslint": "21.1.0",
     "autoprefixer": "^10.4.0",
     "esbuild-visualizer": "^0.7.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-playwright": "^1.6.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "14.6.0",
-    "nx": "21.2.2",
+    "nx": "22.3.3",
     "postcss": "^8.5.3",
     "prettier": "^3.6.1",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.8.3",
-    "typescript-eslint": "^8.33.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.50.1",
     "zx": "^8.4.1"
   },
   "nx": {
